# rpg_vikit

./: .gitignore  README.md
vikit_common/: CMakeLists.txt  package.xml
vikit_common/include/vikit/: abstract_camera.h  aligned_mem.h  atan_camera.h  blender_utils.h  equidistant_camera.h  file_reader.h  file_reader_types.h  homography.h  img_align.h  math_utils.h  nlls_solver.h  nlls_solver_impl.hpp  omni_camera.h  patch_score.h  performance_monitor.h  pinhole_camera.h  polynomial_camera.h  ringbuffer.h  robust_cost.h  sample.h  timer.h  user_input_thread.h  vision.h
vikit_common/src/: atan_camera.cpp  equidistant_camera.cpp  homography.cpp  img_align.cpp  math_utils.cpp  omni_camera.cpp  performance_monitor.cpp  pinhole_camera.cpp  polynomial_camera.cpp  robust_cost.cpp  user_input_thread.cpp  vision.cpp
vikit_common/test/: test_camera.cpp  test_patch_score.cpp  test_triangulation.cpp
vikit_py/: CMakeLists.txt  package.xml  setup.py
vikit_py/src/vikit_py/: ros_node.py
vikit_ros/: CMakeLists.txt  package.xml
vikit_ros/include/vikit/: camera_loader.h  output_helper.h  params_helper.h
vikit_ros/src/: output_helper.cpp
